--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -1,10 +1,8 @@
 name: Continuous Deployment
-
 on:
     push:
         branches:
             - master
-
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -20,6 +18,8 @@ jobs:
               with:
                   path: dist
     deploy:
+        permissions:
+            pages: write
         environment:
             name: github-pages
             url: ${{ steps.deployment.outputs.page_url }}
